<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.cobrtb.Businesses">


    <TextView
        android:id="@+id/textView"
        android:layout_width="205dp"
        android:layout_height="34dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/for_the_ummah"
        android:textColor="#3C8C3F"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <WebView
        android:id="@+id/link2"
        android:layout_width="410dp"
        android:layout_height="387dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="205dp"
        android:layout_height="219dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/fortheummah"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="202dp"
        android:layout_height="216dp"
        android:text="@string/join_us_for_a_future_episode_with_the_brand_for_the_ummah_in_this_future_episode_we_will_be_discussing_their_journey_through_their_brand_creation_tasneem_discusses_the_hardships_that_the_siblings_had_to_over_come_to_begin_their_small_business"
        android:textColor="#527727"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />


</androidx.constraintlayout.widget.ConstraintLayout>